--- a/卡牌游戏类（炉石传说、月圆之夜）/想法与架构/想法1.md
+++ b/卡牌游戏类（炉石传说、月圆之夜）/想法与架构/想法1.md
@@ -1,8 +1,19 @@
-      在我的心目中，游戏都是具有周期性的。如同之前大热的LOL，后起之秀绝地求生。现在的手机游戏更加是越来越快节奏化，但是却脱离了游戏本身，变得没有游戏性了。
-      我回想起这几年玩过的手机游戏，寥寥无几，那种一环一环做任务的那种王道手游根本没有玩过超过三天，真正让我有过废寝忘食感觉的只有目前这两款游戏。
+      在我的心目中，游戏都是具有周期性的。如同之前大热的LOL，后起之秀绝地求生。
+      现在的手机游戏更加是越来越快节奏化，但是却脱离了游戏本身，变得没有游戏性了。
+      我回想起这几年玩过的手机游戏，寥寥无几。
+      那种一环一环做任务的那种王道手游根本没有玩过超过三天。
+      真正让我有过废寝忘食感觉的只有目前这两款游戏。
            炉石传说
-      这个游戏是我在放松自己时看直播了解到的可以让玩家独立建造建造卡组的卡牌游戏，它最初是PC端游戏移植到安卓端的，但是并不妨碍别人对它的喜爱，而这个游戏最成功的就是自定义选三十张牌的竞技模式，这是让人非常着迷的模式，又因为每个人都是随机选择，有着让人信服的公平性与趣味性。
+      这个游戏是我在放松自己时看直播了解到的。
+      可以让玩家独立建造建造卡组的卡牌游戏，它最初是PC端游戏移植到安卓端的。
+      但是并不妨碍别人对它的喜爱，而这个游戏最成功的就是自定义选三十张牌的竞技模式，这是让人非常着迷的模式。
+      又因为每个人都是随机选择，有着让人信服的公平性与趣味性。
       重要字段-竞技模式   玩家独立建造建造    公平性     趣味性。
            月圆之夜    
-      说道月圆之夜就不得不说到杀戮尖塔，它是我在steam上发现的热门游戏，在它的评论区我发现了月圆之夜，与杀戮尖塔本质玩法差不多的单机版的卡牌类手机游戏。月圆之夜的音乐以及画风相当精美，仿佛将自己置身于童话故事中，代入感相当强列，可惜却和杀戮尖塔一样在完了两天以后没有内容可玩。当然现在杀戮尖塔因为在steam上大卖的原因扩展了很多内容，可以说远超月圆之夜的制作水平。但究其原因还是因为月圆之夜没有找到好的平台，没有办法很好的盈利，用爱发电终究不是正途，还是希望它可以找到自己的良性循环发展之道。
+      说道月圆之夜就不得不说到杀戮尖塔，它是我在steam上发现的热门游戏。
+      在它的评论区我发现了月圆之夜，与杀戮尖塔本质玩法差不多的单机版的卡牌类手机游戏。
+      月圆之夜的音乐以及画风相当精美，仿佛将自己置身于童话故事中，代入感相当强列。
+      可惜却和杀戮尖塔一样在完了两天以后没有内容可玩。
+      当然现在杀戮尖塔因为在steam上大卖的原因扩展了很多内容，可以说远超月圆之夜的制作水平。
+      但究其原因还是因为月圆之夜没有找到好的平台，没有办法很好的盈利，用爱发电终究不是正途，还是希望它可以找到自己的良性循环发展之道。
      重要字段-代入感   内容     代入感    平台   循环发展
